--- a/index.html
+++ b/index.html
@@ -155,6 +155,56 @@
             }
         }
 
+        .side-content{
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            align-items: center;
+            grid-area: aside;
+        }
+
+        .side-content p{
+            transform: rotate(-90deg);
+            font-size: 3.2rem;
+            grid-row: 1/2;
+            grid-column: 1/2;
+            opacity: 0;
+
+            animation: aside-text 0.5s ease-in-out 2.5s;
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes aside-text {
+            0%{
+                opacity: 0;
+            }
+            100%{
+                opacity: 1;
+            }
+        }
+
+        .side-content img{
+            width: 100%;
+            grid-column: 2/6;
+            grid-row: 1/2;
+
+            animation: 2.5s aside-img 0.5s ease-in-out;
+        }
+
+        @keyframes aside-img {
+            0%{
+                transform: translateX(600px);
+            }
+            100%{
+                transform: translateY(0px);
+            }
+        }
+
+        .side-content div{
+            background-color: var(--yellow);
+            grid-column: 4/7;
+            grid-row: 1/2;
+            height: 100%;
+        }
         .loader div {
             background: white;
             width: 40px;
@@ -217,8 +267,9 @@
             </section>
             <section class="side-content">
                 <p>Superman</p>
-                <img src="" alt="">
                 <div></div>
+                <img src="https://i.ibb.co/x16pz1x/super-man.png" alt="hero">
+                
             </section>
             <section>
                 <div>
