--- a/index.html
+++ b/index.html
@@ -281,6 +281,83 @@
             }
 
         }
+        .hidden{
+            display: none;
+        }
+
+        .visible{
+           display: grid; 
+        }
+
+        .modal{
+            place-items: center;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            position: absolute;
+            z-index: 4;
+        }
+        .modal__content{
+            background-color: white;
+            width: 50%;
+            height: 50%;
+            display: grid;
+            place-items: center;
+        }
+        .modal__content--close{
+            align-self:flex-start;
+            justify-self: end;
+            padding: 10px;
+        }
+        .modal__content--slider{
+            width: 300px;
+            height: 200px;
+            transform-style: preserve-3d;
+        }
+
+        .cards{
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+        .card{
+            background-color: #ffd602;
+            position: absolute;
+            left: 0;
+            right: 0;
+            width: 50%;
+            height: 100%;
+            margin: 0 auto;
+            transition: transform 0.5s ease;
+            cursor: pointer;
+            display: grid;
+            place-items: center;
+        }
+        #radio-1:checked ~ .cards #card-1,
+        #radio-2:checked ~ .cards #card-2,
+        #radio-3:checked ~ .cards #card-3{
+            transform: translateX(0) scale(1);
+            opacity: 1;
+            z-index: 1;
+        }
+        #radio-1:checked ~ .cards #card-2,
+        #radio-2:checked ~ .cards #card-3,
+        #radio-3:checked ~ .cards #card-1{
+            transform: translateX(40%) scale(0.8);
+            opacity: 0.5;
+            z-index: 0;
+        }
+        #radio-1:checked ~ .cards #card-3,
+        #radio-2:checked ~ .cards #card-1,
+        #radio-3:checked ~ .cards #card-2{
+            transform: translateX(-40%) scale(0.8);
+            opacity: 0.5;
+            z-index: 0;
+        }
+
+        .slider{
+            display: none;
+        }
     </style>
 </head>
 
@@ -315,13 +392,13 @@
                 
             </section>
             <section class="footer">
-                <div>
+                <div id="button">
                     <img src="https://i.ibb.co/tKWqw8J/spiderman.png" alt="spiderman">
                 </div>
-                <div>
+                <div id="button">
                     <img src="https://i.ibb.co/Xzsdvgg/robin.png" alt="robin">
                 </div>
-                <div>
+                <div id="button">
                     <img src="https://i.ibb.co/M18p91c/batman.webp" alt="batman">
                 </div>
             </section>
@@ -333,8 +410,33 @@
             <div></div>
         </section>
         <!-- Modal -->
-        <section></section>
+        <section class="modal hidden">
+            <div class="modal__content">
+                <img class="modal__content--close" src="./close.svg" alt="">
+
+                <div class="modal__content--slider">
+                    <input type="radio" name="radio" class="slider-1 slider" id="radio-1" checked>
+                    <input type="radio" name="radio" class="slider-2 slider" id="radio-2" >
+                    <input type="radio" name="radio" class="slider-3 slider" id="radio-3" >
+
+                    <div class="cards">
+                        <label for="radio-1" id="card-1" class="card">
+                            <img src="" alt="">
+                        </label>
+                        <label for="radio-2" id="card-2" class="card">
+                            <img src="" alt="">
+                        </label>
+                        <label for="radio-3" id="card-3" class="card">
+                            <img src="" alt="">
+                        </label>
+                    </div>
+                </div>
+                
+            </div>    
+        </section>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
